# python-type-stubs

./: .gitignore  README.md  ThirdPartyNotices.txt  pyproject.toml  pyrightconfig.json  pyrighttestconfig.json
.github/workflows/: docify.yml  pyright.yml  test.yml
PIL/: Image.pyi
aiofiles/: __init__.pyi  base.pyi  os.pyi
aiofiles/threadpool/: __init__.pyi  _filemodes.pyi  binary.pyi  text.pyi
arrow/: __init__.pyi  _version.pyi  api.pyi  arrow.pyi  constants.pyi  factory.pyi  formatter.pyi  locales.pyi  parser.pyi  util.pyi
cachetools/: __init__.pyi  abc.pyi  cache.pyi  decorators.pyi  func.pyi  keys.pyi  lfu.pyi  lru.pyi  rr.pyi  ttl.pyi
cv2/: __init__.pyi
deprecated/: README.md  __init__.pyi  classic.pyi  sphinx.pyi
django/: commit.txt
doc/: README.md
faker/: __init__.pyi  cli.pyi  config.pyi  documentor.pyi  factory.pyi  generator.pyi  proxy.pyi
faker/providers/: __init__.pyi
faker/utils/: checksums.pyi  datasets.pyi  datetime_safe.pyi  decorators.pyi  distribution.pyi  loading.pyi  text.pyi
filelock/: __init__.pyi
freezegun/: api.pyi
gym-stubs/: core.pyi
gym-stubs/envs/: registration.pyi
gym-stubs/spaces/: space.pyi
gym-stubs/wrappers/: time_limit.pyi
kombu/: __init__.pyi  abstract.pyi  clocks.pyi  common.pyi  compat.pyi  compression.pyi  connection.pyi  entity.pyi  exceptions.pyi  log.pyi  matcher.pyi  message.pyi  messaging.pyi  mixins.pyi  pidbox.pyi  pools.pyi  resource.pyi  serialization.pyi  simple.pyi  todo.md
kombu/asynchronous/: __init__.pyi  debug.pyi  hub.pyi  timer.pyi
kombu/transport/: __init__.pyi
kombu/utils/: __init__.pyi  collections.pyi  (+13 more)
lightgbm/: __init__.pyi  basic.pyi  compat.pyi  engine.pyi  libpath.pyi  sklearn.pyi
lightgbm-stubs/: callback.pyi  plotting.pyi
magic/: test.py
markdown/: LICENSE.md  blockparser.pyi  blockprocessors.pyi  core.pyi  inlinepatterns.pyi  postprocessors.pyi  preprocessors.pyi  treeprocessors.pyi  util.pyi
matplotlib/: __init__.pyi  _typing.pyi  animation.pyi  artist.pyi  axis.pyi  backend_bases.pyi  backend_managers.pyi  category.pyi  cm.pyi  collections.pyi  colorbar.pyi  colors.pyi  container.pyi  contour.pyi  figure.pyi  font_manager.pyi  image.pyi  legend.pyi  lines.pyi  markers.pyi  patches.pyi  pyplot.pyi  quiver.pyi  text.pyi  ticker.pyi  transforms.pyi  widgets.pyi
matplotlib-wip/: __init__.pyi  _afm.pyi  _cm.pyi  _color_data.pyi  _constrained_layout.pyi  _docstring.pyi  _enums.pyi  _fontconfig_pattern.pyi  _layoutgrid.pyi  _mathtext.pyi  _mathtext_data.pyi  _pylab_helpers.pyi  _text_helpers.pyi  _tight_bbox.pyi  _tight_layout.pyi  _version.pyi  animation.pyi  artist.pyi  axis.pyi  backend_bases.pyi  backend_managers.pyi  backend_tools.pyi  bezier.pyi  category.pyi  cm.pyi  collections.pyi  colorbar.pyi  colors.pyi  container.pyi  contour.pyi  dates.pyi  dviread.pyi  figure.pyi  font_manager.pyi  gridspec.pyi  hatch.pyi  image.pyi  layout_engine.pyi  legend.pyi  legend_handler.pyi  (+24 more)
multidict/: __init__.pyi  _abc.pyi  _compat.pyi  _multidict_py.pyi
netaddr/: README.md  __init__.pyi  cli.pyi  compat.pyi  core.pyi  fbsocket.pyi
networkx/: README.md
numpy/: README.md  commit.txt
openpyxl/: __init__.pyi  commit.txt
packaging/: README.md  _compat.pyi  _structures.pyi  _typing.pyi  markers.pyi  requirements.pyi  specifiers.pyi  tags.pyi  utils.pyi  version.pyi
pandas/: LICENSE  README.md  __init__.pyi  _testing.pyi  _typing.pyi  testing.pyi
pendulum/: LICENSE  README.md  __init__.pyi  constants.pyi  date.pyi  datetime.pyi  duration.pyi  exceptions.pyi  helpers.pyi  parser.pyi  period.pyi  time.pyi
pygame/: README.md  __init__.pyi  bufferproxy.pyi  camera.pyi  color.pyi  compat.pyi  constants.pyi  cursors.pyi  display.pyi  draw.pyi  event.pyi  fastevent.pyi  font.pyi  freetype.pyi  gfxdraw.pyi  image.pyi  joystick.pyi  key.pyi  mask.pyi  math.pyi  midi.pyi  mixer.pyi  mouse.pyi  music.pyi  pixelarray.pyi  pixelcopy.pyi  rect.pyi  scrap.pyi  sndarray.pyi  sprite.pyi  surface.pyi  surfarray.pyi  time.pyi  transform.pyi  version.pyi
pythonwin-stubs/: dde.pyi  win32ui.pyi  win32uiole.pyi
retry/: LICENSE  api.pyi
seaborn-stubs/: palettes.pyi
skimage/: README.md  __init__.pyi  setup.pyi
sklearn/: README.md  __init__.pyi  _config.pyi  _min_dependencies.pyi  _typing.pyi  base.pyi  calibration.pyi  conftest.pyi  discriminant_analysis.pyi  dummy.pyi  exceptions.pyi  isotonic.pyi  kernel_approximation.pyi  kernel_ridge.pyi  multiclass.pyi  multioutput.pyi  naive_bayes.pyi  pipeline.pyi  random_projection.pyi  setup.pyi
slugify/: LICENSE  __init__.pyi  slugify.pyi  special.pyi
sqlalchemy/: __init__.pyi  commit.txt  cprocessors.pyi  cresultproxy.pyi  cutils.pyi  events.pyi  exc.pyi  inspection.pyi  interfaces.pyi  log.pyi  processors.pyi  schema.pyi  types.pyi
tenacity/: README.md  __init__.pyi  _asyncio.pyi  _utils.pyi  after.pyi  before.pyi  before_sleep.pyi  compat.pyi  nap.pyi  retry.pyi  stop.pyi  tornadoweb.pyi  wait.pyi
tensorflow/: __init__.pyi  distribute.pyi  dtypes.pyi  graph_util.pyi  linalg.pyi  lookup.pyi  losses.pyi  math.pyi  metrics.pyi  nn.pyi  ragged.pyi  random.pyi  sparse.pyi  strings.pyi  summary.pyi  test.pyi
tests/: matplotlib.py  pyrighttestconfig.json  requirements.txt  run_formatters.sh  run_hygiene.py  run_stubtest.py  run_tests.cmd  run_tests.py  run_tests.sh
tqdm/: __init__.pyi
utils/: README.md  count_ids.py  remove_private_re_exports.py  requirements.txt  validate_stubs.py
utils/docify/: README.md  pyproject.toml  setup.cfg  setup.py
utils/docify/docify/: __init__.py  __main__.py  cli.py  docify.py
win32-stubs/: mmapfile.pyi  odbc.pyi  perfmon.pyi  servicemanager.pyi  timer.pyi  win2kras.pyi  win32api.pyi  win32clipboard.pyi  win32console.pyi  win32cred.pyi  win32crypt.pyi  win32event.pyi  win32evtlog.pyi  win32file.pyi  win32gui.pyi  win32help.pyi  win32inet.pyi  win32job.pyi  win32lz.pyi  win32net.pyi  win32pdh.pyi  win32pipe.pyi  win32print.pyi  win32process.pyi  win32profile.pyi  win32ras.pyi  win32security.pyi  win32service.pyi  win32trace.pyi  win32transaction.pyi  win32ts.pyi  win32wnet.pyi  winxpgui.pyi
(+3256 files in other folders)
